warningRectangle size fix for failure on mobile

--- a/src/Components/PageCenter.css
+++ b/src/Components/PageCenter.css
@@ -41,9 +41,23 @@
 
 .warningRectangle p {
     font-family: Inter, system-ui;
+    margin: 0;
 }
 
-.warningRectangle p {
+.warningRectangleFail {
+    display: flex;
+    flex-direction: row;
+    background: white;
+    color: black;
+    border-radius: 10px;
+    padding: 2vh;
+    size: 10vh;
+    filter: drop-shadow(0px 4px 34px rgba(0, 0, 0, 0.25));
+    width: 25%;
+}
+
+.warningRectangleFail p {
+    font-family: Inter, system-ui;
     margin: 0;
 }
 
@@ -134,6 +148,17 @@
     color: black;
     border-radius: 10px;
     height: 10%;
+    filter: drop-shadow(0px 4px 34px rgba(0, 0, 0, 0.25));
+}
+
+.mPageCenter .warningRectangleFail {
+    position: absolute;
+    width: 70%;
+    top: 15%;
+    background: white;
+    color: black;
+    border-radius: 10px;
+    height: 15%;
     filter: drop-shadow(0px 4px 34px rgba(0, 0, 0, 0.25));
 }
 
